--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,12 +104,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.tmb.tests.OrangeHRMTests" class="method navigator-link" hash-for-method="loginLogoutTest({fname=testing mini bytes, password=admin123, browser=firefox, testname=loginLogoutTest, execute=yes...)">loginLogoutTest({fname=testing mini bytes, password=admin123, browser=firefox, testname=loginLogoutTest, execute=yes...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.tmb.tests.OrangeHRMTests" class="method navigator-link" hash-for-method="loginLogoutTest({fname=amuthan, password=YWRtaW4xMjM=, browser=chrome, testname=loginLogoutTest, execute=yes, userna...)">loginLogoutTest({fname=amuthan, password=YWRtaW4xMjM=, browser=chrome, testname=loginLogoutTest, execute=yes, userna...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.tmb.tests.OrangeHRMTests" class="method navigator-link" hash-for-method="loginLogoutTest({fname=amuthan, password=admin123, browser=chrome, testname=loginLogoutTest, execute=yes, username=A...)">loginLogoutTest({fname=amuthan, password=admin123, browser=chrome, testname=loginLogoutTest, execute=yes, username=A...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.tmb.tests.OrangeHRMTests" class="method navigator-link" hash-for-method="loginLogoutTest({fname=testing mini bytes, password=YWRtaW4xMjM=, browser=firefox, testname=loginLogoutTest, execute...)">loginLogoutTest({fname=testing mini bytes, password=YWRtaW4xMjM=, browser=firefox, testname=loginLogoutTest, execute...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -132,20 +132,20 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginLogoutTest({fname=testing mini bytes, password=admin123, browser=firefox, testname=loginLogoutTest, execute=yes...)">
-                  </a> <!-- loginLogoutTest({fname=testing mini bytes, password=admin123, browser=firefox, testname=loginLogoutTest, execute=yes...) -->
+                  <a name="loginLogoutTest({fname=amuthan, password=YWRtaW4xMjM=, browser=chrome, testname=loginLogoutTest, execute=yes, userna...)">
+                  </a> <!-- loginLogoutTest({fname=amuthan, password=YWRtaW4xMjM=, browser=chrome, testname=loginLogoutTest, execute=yes, userna...) -->
                   <span class="method-name">loginLogoutTest</span>
-                  <span class="parameters">({fname=testing mini bytes, password=admin123, browser=firefox, testname=loginLogoutTest, execute=yes, username=Admin, menuText=})</span>
+                  <span class="parameters">({fname=amuthan, password=YWRtaW4xMjM=, browser=chrome, testname=loginLogoutTest, execute=yes, username=Admin, menuText=})</span>
                   <em>
 (to check whether the user can successfully login and logout)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="loginLogoutTest({fname=amuthan, password=admin123, browser=chrome, testname=loginLogoutTest, execute=yes, username=A...)">
-                  </a> <!-- loginLogoutTest({fname=amuthan, password=admin123, browser=chrome, testname=loginLogoutTest, execute=yes, username=A...) -->
+                  <a name="loginLogoutTest({fname=testing mini bytes, password=YWRtaW4xMjM=, browser=firefox, testname=loginLogoutTest, execute...)">
+                  </a> <!-- loginLogoutTest({fname=testing mini bytes, password=YWRtaW4xMjM=, browser=firefox, testname=loginLogoutTest, execute...) -->
                   <span class="method-name">loginLogoutTest</span>
-                  <span class="parameters">({fname=amuthan, password=admin123, browser=chrome, testname=loginLogoutTest, execute=yes, username=Admin, menuText=})</span>
+                  <span class="parameters">({fname=testing mini bytes, password=YWRtaW4xMjM=, browser=firefox, testname=loginLogoutTest, execute=yes, username=Admin, menuText=})</span>
                   <em>
 (to check whether the user can successfully login and logout)                  </em>
                 </div> <!-- method-content -->
@@ -213,11 +213,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginLogoutTest')
 data.setCell(0, 2, 'com.tmb.tests.OrangeHRMTests')
-data.setCell(0, 3, 4967);
+data.setCell(0, 3, 4832);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'loginLogoutTest')
 data.setCell(1, 2, 'com.tmb.tests.OrangeHRMTests')
-data.setCell(1, 3, 4608);
+data.setCell(1, 3, 4318);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -254,32 +254,32 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
-                <span class="method-name">setUp([{fname=amuthan, password=admin123, browser=chrome, testname=loginLogoutTest, execute=yes, username=...)</span>
-                <span class="method-start">787 ms</span>
+                <span class="method-name">setUp([{fname=amuthan, password=YWRtaW4xMjM=, browser=chrome, testname=loginLogoutTest, execute=yes, usern...)</span>
+                <span class="method-start">759 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
-                <span class="method-name">setUp([{fname=testing mini bytes, password=admin123, browser=firefox, testname=loginLogoutTest, execute=ye...)</span>
-                <span class="method-start">788 ms</span>
+                <span class="method-name">setUp([{fname=testing mini bytes, password=YWRtaW4xMjM=, browser=firefox, testname=loginLogoutTest, execut...)</span>
+                <span class="method-start">761 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginLogoutTest({fname=amuthan, password=admin123, browser=chrome, testname=loginLogoutTest, execute=yes, username=A...)</span>
-                <span class="method-start">11535 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">loginLogoutTest({fname=testing mini bytes, password=admin123, browser=firefox, testname=loginLogoutTest, execute=yes...)</span>
-                <span class="method-start">15911 ms</span>
+                <span class="method-name">loginLogoutTest({fname=amuthan, password=YWRtaW4xMjM=, browser=chrome, testname=loginLogoutTest, execute=yes, userna...)</span>
+                <span class="method-start">7880 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">16506 ms</span>
+                <span class="method-start">12714 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">loginLogoutTest({fname=testing mini bytes, password=YWRtaW4xMjM=, browser=firefox, testname=loginLogoutTest, execute...)</span>
+                <span class="method-start">13379 ms</span>
+              </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">20520 ms</span>
+                <span class="method-start">17698 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">21584 ms</span>
+                <span class="method-start">18712 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
